# sonic-pi-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/sonic_pi_mcp/: __init__.py  config.py  errors.py  models.py  server.py
src/sonic_pi_mcp/docs/: __init__.py  search.py
src/sonic_pi_mcp/sonic/: __init__.py  daemon.py  diagnostics.py  events.py  locator.py  logs.py  osc.py  protocol.py  session.py
